# multi_uav_ooda_system

./: .flake8  .gitignore  BEFORE_AFTER_COMPARISON.md  CHAPTER6_ENHANCEMENT_GUIDE.md  CHAPTER6_INDEX.md  CHAPTER6_INTEGRATION_COMPLETE.md  CHAPTER6_QUICK_REFERENCE.md  CHAPTER6_REWRITE_SUMMARY.md  CHAPTER6_SYNTHESIS_SUMMARY.md  DASHBOARD_METRICS_UPDATE.md  DEPLOYMENT.md  LICENSE  METRICS_PERSISTENCE_IMPLEMENTATION.md  METRICS_PERSISTENCE_TIMELINE.txt  Makefile  OODA_METRICS_BEHAVIOR.md  OODA_METRICS_ENHANCEMENT.md  OODA_METRICS_PERSISTENCE.md  OODA_MONITOR_LAYOUT.txt  QUICK_START_METRICS.md  README.md  SECTION_4.2_VISUAL_TRANSFORMATION.md  TESTING.md  TRANSFORMATION_COMPLETE_FINAL.md  VISUAL_TRANSFORMATION_COMPLETE.md  launch.py  launch_with_gui.py  pubs.md  pyproject.toml  pytest.ini  requirements.txt  results.json  results.md  run_dashboard.py  scripts.sh  tcc.tex  test_system.py  tests.md
config/: gcs_config.yaml  uav_config.yaml
diagrams/: delivery_loop.mmd  sar_loop.mmd  surveillance_loop.mmd
gcs/: __init__.py  constraint_validator.py  dashboard_bridge.py  fleet_monitor.py  main.py  mission_manager.py  objective_function.py  ooda_engine.py
missions/: __init__.py  test_scenario.yaml
tests/: __init__.py  conftest.py
tests/experiments/: __init__.py  baseline_strategies.py  conftest.py  experiment_fixtures.py  run_experiments.py  test_d6_delivery_baseline.py  test_r5_sar_baseline.py  test_s5_surveillance_baseline.py
tests/integration/: __init__.py  test_delivery_battery_failure.py  test_delivery_mission.py  test_delivery_ooda_charging.py  test_sar_mission.py  test_surveillance_mission.py
tests/regression/: __init__.py  test_fixed_bugs.py
tests/unit/: __init__.py  test_battery.py  test_boundary.py  (+1 more)
uav/: __init__.py  client.py  simulation.py
visualization/: __init__.py  config.py  web_dashboard.py
(+1 files in other folders)
